--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,14 +6,14 @@
   html {
     @apply bg-dark-primary font-sans text-light-primary font-medium;
   }
-  #__next {
-    @apply flex min-h-screen flex-col justify-between;
-  }
   p {
     @apply font-normal;
   }
   .link {
     @apply text-blue-400 hover:text-blue-500 transition-colors hover:underline;
+  }
+  .nav-button {
+    @apply flex items-center gap-2 hover:text-light-secondary transition-colors uppercase;
   }
 }
 
